--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,3 +26,51 @@ details{
 details p{
     margin-inline: 20px;
 }
+
+.rodape{
+    display: flex;
+    justify-content: center;
+    background-color: grey;
+    margin-bottom: 10px;
+    height: 85px;
+    align-items: center;
+    margin-top: 100%;
+}
+
+.carrossel{
+    position: relative;
+    width: 80%;
+    overflow: hidden;
+    border: 2px solid #ddd;
+    border-radius: 10px;
+}
+
+.imagens {
+    display: flex;
+    transition: transform 0.5s ease;
+}
+
+.imagens img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(255, 255, 255, 0.7);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 18px;
+}
+
+.prev {
+    left: 10px;
+}
+
+.next {
+    right: 10px;
+}
